src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__too_many_parameters.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/too_many_parameters.lox
---
Syntax error(s):
[ line 257 ] : Can't have more than 255 parameters.
